# lngcnv

./: Cargo.toml  LICENSE  LICENSE.md  README.md  lngcnv  rustfmt.toml  snapcraft.yaml
.github/: FUNDING.yml
src/: lang.rs  lib.rs  main.rs  menu.rs  modque.rs
src/lang/: modeng.rs  modeng_au.rs  modeng_au_act.rs  modeng_au_nt.rs  modeng_au_sa.rs  modeng_nz.rs  modeng_ort.rs  modeng_us.rs  modeng_us_il.rs  modeng_us_tx.rs  modlat.rs  modpol.rs  modque.rs  modspa.rs  modtca.rs
