[package]
name = "lngcnv"
version = "1.6.0-alpha.11"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "command line linguistic tools: display pronunciation, translate between dialects, convert between orthographies; support for multiple modern and ancient languages: English, Latin, Polish, Quechua, Spanish, Tikuna"
readme = "README.md"
repository = "https://github.com/piotrbajdek/lngcnv"
license = "MIT"
keywords = ["linguistics", "phonetics", "pronunciation", "speech", "spelling"]
categories = ["command-line-utilities", "text-processing", "algorithms"]
