[package]
name = "lngcnv"
version = "1.8.5"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "linguistics: display pronunciation, translate between dialects, convert between orthographies; support for multiple languages: English, Latin, Polish, Quechua, Spanish, Tikuna"
readme = "README.md"
repository = "https://github.com/piotrbajdek/lngcnv"
license = "MIT"
keywords = ["linguistics", "phonetics", "pronunciation", "speech", "spelling"]
categories = ["command-line-utilities", "text-processing", "algorithms"]

[profile.release]
codegen-units = 1
strip = true

[package.metadata.generate-rpm]
assets = [
{ source = "target/release/lngcnv", dest = "/usr/bin/lngcnv", mode = "755" }
]
