[package]
name = "lngcnv"
version = "1.10.2"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2024"
description = "linguistics: display pronunciation, translate between dialects, convert between orthographies; support for multiple languages: English, Latin, Polish, Quechua, Spanish, Tikuna"
readme = "README.md"
repository = "https://github.com/piotrbajdek/lngcnv"
license = "MIT"
keywords = ["linguistics", "phonetics", "speech", "spelling", "text-processing"]
categories = ["command-line-utilities", "text-processing", "algorithms"]

[profile.release]
strip = true

[package.metadata.generate-rpm]
assets = [
{ source = "target/release/lngcnv", dest = "/usr/bin/lngcnv", mode = "755" }
]
